--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 	</header>
 	<!--Use the nav area to add hyperlinks to other pages within the website-->
 	<nav>
-		<p>&#9475; &nbsp; Home &nbsp; &#9475; &nbsp;
-		About Me &nbsp; &#9475; &nbsp;
-		Assignments &nbsp; &#9475; &nbsp;
-		Extras &nbsp; &#9475; &nbsp;
-		Contact us &nbsp; &#9475; &nbsp;</p>
+		<p><a href="index.html">&#9475; &nbsp; Home &nbsp; &#9475; &nbsp;
+		<a href="about.html">About Me</a> &nbsp; &#9475; &nbsp;
+		<a href="assignments.html">Assignments</a> &nbsp; &#9475; &nbsp;
+		<a href="extras.html">Extras</a> &nbsp; &#9475; &nbsp;
+		<a href="contact-us.html">Contact Me</a> &nbsp; &#9475; &nbsp;</p>
 	</nav>
 	
 	<!-- use the main area to add the main content of the page-->
