--- a/contact-us.html
+++ b/contact-us.html
@@ -26,7 +26,11 @@
 	<!-- use the main area to add the main content of the page-->
 	<main>
 	<img src="images/green.gif" alt="green" height="490" width="716">
-	
+	<ul>Ways to contact me
+			<li>Email: Samantha.Martin@stu.cvccworks.edu or Samantha.Martin@cuyhtssd.org </li>
+			<li>Phone Number: NOTE* WILL BE ADDED LATER!</li>
+			<li>Discord: NOTE* WILL BE ADDED LATER!</li>
+		</ul>
 	</main>
 	
 	<!-- use the footer area to add webpage content of the page-->
