--- a/assignments.html
+++ b/assignments.html
@@ -29,7 +29,7 @@
 	
 	</main>
 		<p><a href="chap-3/index.html" target="blank_">Fitness Chapter #3</a></p>
-		<p><a href="chapter-4/Fitness/index.html" target="blank_">Fitness Chapter #4</a></p>
+		<p><a href="/chapter-4/Fitness/index.html" target="blank_">Fitness Chapter #4</a></p>
 	<!-- use the footer area to add webpage content of the page-->
 	<footer>
 		<p>&copy; Copyright 2024. All Rights Reserved. </p>
