--- a/fitness/Index.html
+++ b/fitness/Index.html
@@ -5,7 +5,7 @@
 		<title>Forward Fitness Club</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" 
-		 href="css/styles.css"
+		 href="CSS/styles.css"
 		 type="text/css">
 		
 	</head>
