--- a/assignments.html
+++ b/assignments.html
@@ -25,7 +25,7 @@
 	
 	<!-- use the main area to add the main content of the page-->
 	<main>
-	<img src="images/rave-mimi.gif" alt="MIMIKYU RAVE" height="490" width="716">
+	<img src="images/Pink.jfif" alt="i persist" height="490" width="200">
 	
 	</main>
 		<p><a href="chap-3/index.html" target="blank_">Fitness Chapter #3</a></p>
