--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 	
 	<!-- use the main area to add the main content of the page-->
 	<main>
-	<img src="images/green.gif" alt="green" height="490" width="716">
+	<img src="images/ill.jpg" alt="green" height="490" width="716">
 	
 	</main>
 	
