--- a/contact-us.html
+++ b/contact-us.html
@@ -28,8 +28,8 @@
 	<img src="images/sandcats87.jfif" alt="green" height="490" width="716">
 	<ul>Ways to contact me
 			<li>Email: Samantha.Martin@stu.cvccworks.edu or Samantha.Martin@cuyhtssd.org </li>
-			<li>Phone Number: NOTE* WILL BE ADDED LATER!</li>
-			<li>Discord: NOTE* WILL BE ADDED LATER!</li>
+			<li>Phone Number: NOPE!</li>
+			<li>Discord: NOPE!</li>
 		</ul>
 	</main>
 	
