--- a/about.html
+++ b/about.html
@@ -4,6 +4,12 @@
 <head>
 	<title>Portfolio</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" 
+	href="css/styles.css"
+	type="text/css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -16,11 +22,13 @@
 	</header>
 	<!--Use the nav area to add hyperlinks to other pages within the website-->
 	<nav>
-		<p><a href="index.html">&#9475; &nbsp; Home &nbsp; &#9475; &nbsp;
-		<a href="about.html">About Me</a> &nbsp; &#9475; &nbsp;
-		<a href="assignments.html">Assignments</a> &nbsp; &#9475; &nbsp;
-		<a href="extras.html">Extras</a> &nbsp; &#9475; &nbsp;
-		<a href="contact-us.html">Contact Me</a> &nbsp; &#9475; &nbsp;</p>
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="about.html">About Me</a></li>
+			<li><a href="assignments.html">Assignments</a></li>
+			<li><a href="extras.html">Extras</a></li>
+			<li><a href="contact-us.html">Contact Me</a></li>
+		</ul>
 	</nav>
 	
 	<!-- use the main area to add the main content of the page-->
