--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 	<title>Portfolio</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" 
-	href="css/styles.css"
+	href="CSS/styles.css"
 	type="text/css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
