--- a/fitness/Index.html
+++ b/fitness/Index.html
@@ -21,8 +21,8 @@
 		<!--Use the nav area to add hyperlinks to other pages within the website-->
 		<nav>
 			<ul>
-			<li><a href="index.html"> Home</a></li> 
-			<li><a href="about.html">About us</a></li>     
+			<li><a href="Index.html"> Home</a></li> 
+			<li><a href="About.html">About us</a></li>     
 			<li><a href="Classes.html">Classes</a></li> 
 			<li><a href="Nutriton.html">Nutriton</a></li> 
 			<li><a href="contact.html">Contact us</a></li> 
