--- a/fitness/About.html
+++ b/fitness/About.html
@@ -33,7 +33,7 @@
 			
 			<div id="contact">
 			
-				<h2>Ready to get started? Contact us today></h2>
+				<h2>Ready to get started? Contact us today</h2>
 				<h4>(814) 555-9608<h4>
 				<h4>Email us:<a href="mailto:forwardfitness@club.net">forwardfitness@club.net</a></h4>
 				<h4>Visit us at: 1275 Channel Center street, Boston, MA 02210</h4>
