--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 
 	<header>
 		<h1>About Me</h1>
-		    
+		   
 	</header>
 	<!--Use the nav area to add hyperlinks to other pages within the website-->
 	<nav>
@@ -32,7 +32,7 @@
 	
 	<!-- use the main area to add the main content of the page-->
 	<main>
-	<img src="images/ill.jpg" alt="green" height="490" width="716">
+	<img class="locked_frog" img src="images/ill.jpg" alt="green" height="490" width="716">
 	
 	</main>
 	
