--- a/assignments.html
+++ b/assignments.html
@@ -17,7 +17,7 @@
 
 	<header>
 		<h1>Assignments</h1>
-		    
+		   
 	</header>
 	<!--Use the nav area to add hyperlinks to other pages within the website-->
 	<nav>
@@ -32,7 +32,7 @@
 	
 	<!-- use the main area to add the main content of the page-->
 	<main>
-	<img src="images/Pink.jfif" alt="i persist" height="490" width="716">
+	<img class="locked_frog" img src="images/Pink.jfif" alt="i persist" height="490" width="716">
 	
 	</main>
 		<p><a href="chap-3/index.html" target="blank_">Fitness Chapter #3</a></p>
