--- a/assignments.html
+++ b/assignments.html
@@ -39,6 +39,8 @@
 		<p><a href="fitness/Index.html" target="blank_">Fitness Chapter #4</a></p>
 		<p><a href="apply/index.html" target="blank_">Apply chapter #4</a></p>
 		<p><a href="extend/extend04.html" target="blank_">Extend chapter #4</a></p>
+		<p><a href="appl3/extend03.html" target="blank_">Extend chapter #3</a></p>
+		
 	<!-- use the footer area to add webpage content of the page-->
 	<footer>
 		<p>&copy; Copyright 2024. All Rights Reserved. </p>
