--- a/assignments.html
+++ b/assignments.html
@@ -39,7 +39,8 @@
 		<p><a href="fitness/Index.html" target="blank_">Fitness Chapter #4</a></p>
 		<p><a href="apply/index.html" target="blank_">Apply chapter #4</a></p>
 		<p><a href="extend/extend04.html" target="blank_">Extend chapter #4</a></p>
-		<p><a href="appl3/index.html" target="blank_">Extend chapter #3</a></p>
+		<p><a href="appl-3/index.html" target="blank_">Extend chapter #3</a></p>
+		<p><a href="apply-3/index.html" target="blank_">apply chapter #3</a></p>
 		
 	<!-- use the footer area to add webpage content of the page-->
 	<footer>
