--- a/assignments.html
+++ b/assignments.html
@@ -41,6 +41,7 @@
 		<p><a href="extend/extend04.html" target="blank_">Extend chapter #4</a></p>
 		<p><a href="appl-3/index.html" target="blank_">Extend chapter #3</a></p>
 		<p><a href="apply-3/index.html" target="blank_">apply chapter #3</a></p>
+		<p><a href="fitness-6/index.html" target="blank_">Fitness Chapter #6</a></p>
 		
 	<!-- use the footer area to add webpage content of the page-->
 	<footer>
