--- a/assignments.html
+++ b/assignments.html
@@ -2,51 +2,60 @@
 <!--thos website template was created by Sam"-->
 <html lang="en">
 <head>
-	<title>Portfolio</title>
-	<meta charset="utf-8">
-	<link rel="stylesheet" 
-	href="CSS/styles.css"
-	type="text/css">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+<title>Portfolio</title>
+<meta charset="utf-8">
+<link rel="stylesheet" 
+href="CSS/styles.css"
+type="text/css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
 </head>
 <body>
 
-	<!--use the header area for the website name or logo-->
+<!--use the header area for the website name or logo-->
 
-	<header>
-		<h1>Assignments</h1>
-		   
-	</header>
-	<!--Use the nav area to add hyperlinks to other pages within the website-->
-	<nav>
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="about.html">About Me</a></li>
-			<li><a href="assignments.html">Assignments</a></li>
-			<li><a href="extras.html">Extras</a></li>
-			<li><a href="contact-us.html">Contact Me</a></li>
-		</ul>
-	</nav>
+<header>
+	<h1>Assignments</h1>
+	   
+</header>
+<!--Use the nav area to add hyperlinks to other pages within the website-->
+<nav>
+	<ul>
+		<li><a href="index.html">Home</a></li>
+		<li><a href="about.html">About Me</a></li>
+		<li><a href="assignments.html">Assignments</a></li>
+		<li><a href="extras.html">Extras</a></li>
+		<li><a href="contact-us.html">Contact Me</a></li>
+	</ul>
+</nav>
+
+<!-- use the main area to add the main content of the page-->
+<main>
+<img class="locked_frog" img src="images/Pink.jfif" alt="i persist" height="490" width="716">
+
+</main>
 	
-	<!-- use the main area to add the main content of the page-->
-	<main>
-	<img class="locked_frog" img src="images/Pink.jfif" alt="i persist" height="490" width="716">
 	
-	</main>
-		<p><a href="chap-3/index.html" target="blank_">Fitness Chapter #3</a></p>
-		<p><a href="fitness/Index.html" target="blank_">Fitness Chapter #4</a></p>
-		<p><a href="apply/index.html" target="blank_">Apply chapter #4</a></p>
-		<p><a href="extend/extend04.html" target="blank_">Extend chapter #4</a></p>
-		<p><a href="appl-3/index.html" target="blank_">Extend chapter #3</a></p>
-		<p><a href="apply-3/index.html" target="blank_">apply chapter #3</a></p>
-		<p><a href="fitness-6/index.html" target="blank_">Fitness Chapter #6</a></p>
-		
-	<!-- use the footer area to add webpage content of the page-->
-	<footer>
-		<p>&copy; Copyright 2024. All Rights Reserved. </p>
-		<p>Samantha.Martin@stu.cvccworks.edu</p>
-	</footer>
+	<div id="billy">
+		<p><a href="apply/index.html" target="blank_">Apply chapter #4</a></p></div>
+	<div id="conn">
+		<p><a href="extend/extend04.html" target="blank_">Extend chapter #4</a></p></div>
+	<div id="gray">	
+		<p><a href="appl-3/index.html" target="blank_">Extend chapter #3</a></p></div>
+	<div id="santa">
+		<p><a href="apply-3/index.html" target="blank_">apply chapter #3</a></p></div>
+		<div id="go">
+		<p><a href="chap-3/index.html" target="blank_">Fitness Chapter #3</a></p></div>
+		<div id="home">
+		<p><a href="chapter-4/Index.html" target="blank_">Fitness Chapter #4</a></p></div>
+	<div id="john">	
+		<p><a href="fitness-6/index.html" target="blank_">Fitness Chapter #6</a></p></div>
+	
+<!-- use the footer area to add webpage content of the page-->
+<footer>
+	<p>&copy; Copyright 2024. All Rights Reserved. </p>
+	<p>Samantha.Martin@stu.cvccworks.edu</p>
+</footer>
 </body>
 </html>
