--- a/assignments.html
+++ b/assignments.html
@@ -36,21 +36,31 @@ type="text/css">
 
 </main>
 	
-	
+	<figure class="frame">
 	<div id="billy">
 		<p><a href="apply/index.html" target="blank_">Apply chapter #4</a></p></div>
 	<div id="conn">
+	<figure class="frame">
 		<p><a href="extend/extend04.html" target="blank_">Extend chapter #4</a></p></div>
 	<div id="gray">	
+	<figure class="frame">
 		<p><a href="appl-3/index.html" target="blank_">Extend chapter #3</a></p></div>
 	<div id="santa">
+	<figure class="frame">
 		<p><a href="apply-3/index.html" target="blank_">apply chapter #3</a></p></div>
 		<div id="go">
+		<figure class="frame">
 		<p><a href="chap-3/index.html" target="blank_">Fitness Chapter #3</a></p></div>
 		<div id="home">
+		<figure class="frame">
 		<p><a href="chapter-4/Index.html" target="blank_">Fitness Chapter #4</a></p></div>
-	<div id="john">	
+	<div id="john">
+	<figure class="frame">
 		<p><a href="fitness-6/index.html" target="blank_">Fitness Chapter #6</a></p></div>
+	<div id="tim">
+	<figure class="frame">
+		<p><a href="fitness-7/index.html" target="blank_">Fitness Chapter #7</a></p></div>
+		</figure>
 	
 <!-- use the footer area to add webpage content of the page-->
 <footer>
