--- a/assignments.html
+++ b/assignments.html
@@ -16,56 +16,63 @@ type="text/css">
 <!--use the header area for the website name or logo-->
 
 <header>
-	<h1>Assignments</h1>
-	   
+<h1>Assignments</h1>
+   
 </header>
 <!--Use the nav area to add hyperlinks to other pages within the website-->
 <nav>
-	<ul>
-		<li><a href="index.html">Home</a></li>
-		<li><a href="about.html">About Me</a></li>
-		<li><a href="assignments.html">Assignments</a></li>
-		<li><a href="extras.html">Extras</a></li>
-		<li><a href="contact-us.html">Contact Me</a></li>
-	</ul>
+<ul>
+	<li><a href="index.html">Home</a></li>
+	<li><a href="about.html">About Me</a></li>
+	<li><a href="assignments.html">Assignments</a></li>
+	<li><a href="extras.html">Extras</a></li>
+	<li><a href="contact-us.html">Contact Me</a></li>
+</ul>
 </nav>
 
 <!-- use the main area to add the main content of the page-->
 <main>
-<img class="locked_frog" img src="images/Pink.jfif" alt="i persist" height="490" width="716">
-
+<a href="https://youtu.be/dQw4w9WgXcQ?si=K2pSqtfVNZJHEusG" target="_blank"><img class="locked_frog" img src="images/Pink.jfif" alt="i persist" height="490" width="716"></a>
+<h1>CLICK THE PHOTO!!<h1>
 </main>
-	
+
+<figure class="frame">
+<div class="shoe">
+	<p><a href="apply/index.html" target="blank_">Apply chapter #4</a></p></div>
+</figure>
+<figure class="frame">
+<div class="pizza">
+	<p><a href="extend/extend04.html" target="blank_">Extend chapter #4</a></p></div>
+</figure>
+<figure class="frame">
+<div class="shoe">
+	<p><a href="appl-3/index.html" target="blank_">Extend chapter #3</a></p></div>
+</figure>
+<figure class="frame">
+<div class="pizza">
+	<p><a href="apply-3/index.html" target="blank_">apply chapter #3</a></p></div>
+	</figure>
 	<figure class="frame">
-	<div id="billy">
-		<p><a href="apply/index.html" target="blank_">Apply chapter #4</a></p></div>
-	<div id="conn">
+	<div class="shoe">
+	<p><a href="chap-3/index.html" target="blank_">Fitness Chapter #3</a></p></div>
+	</figure>
 	<figure class="frame">
-		<p><a href="extend/extend04.html" target="blank_">Extend chapter #4</a></p></div>
-	<div id="gray">	
-	<figure class="frame">
-		<p><a href="appl-3/index.html" target="blank_">Extend chapter #3</a></p></div>
-	<div id="santa">
-	<figure class="frame">
-		<p><a href="apply-3/index.html" target="blank_">apply chapter #3</a></p></div>
-		<div id="go">
-		<figure class="frame">
-		<p><a href="chap-3/index.html" target="blank_">Fitness Chapter #3</a></p></div>
-		<div id="home">
-		<figure class="frame">
-		<p><a href="chapter-4/Index.html" target="blank_">Fitness Chapter #4</a></p></div>
-	<div id="john">
-	<figure class="frame">
-		<p><a href="fitness-6/index.html" target="blank_">Fitness Chapter #6</a></p></div>
-	<div id="tim">
-	<figure class="frame">
-		<p><a href="fitness-7/index.html" target="blank_">Fitness Chapter #7</a></p></div>
-		</figure>
-	
+	<div class="pizza">
+	<p><a href="chapter-4/Index.html" target="blank_">Fitness Chapter #4</a></p></div>
+</figure>
+<figure class="frame">
+<div class="shoe">
+	<p><a href="fitness-6/index.html" target="blank_">Fitness Chapter #6</a></p></div>
+</figure>
+<figure class="frame">
+<div class="pizza">
+	<p><a href="fitness-7/index.html" target="blank_">Fitness Chapter #7</a></p></div>
+</figure>
+
 <!-- use the footer area to add webpage content of the page-->
 <footer>
-	<p>&copy; Copyright 2024. All Rights Reserved. </p>
-	<p>Samantha.Martin@stu.cvccworks.edu</p>
+<p>&copy; Copyright 2024. All Rights Reserved. </p>
+<p>Samantha.Martin@stu.cvccworks.edu</p>
 </footer>
 </body>
 </html>
