--- a/assignments.html
+++ b/assignments.html
@@ -66,7 +66,7 @@ type="text/css">
 </figure>
 <figure class="frame">
 <div class="pizza">
-	<p><a href="fitness-7/index.html" target="blank">Fitness Chapter #7</a></p></div>
+	<p><a href="fitness-7/index.html">Fitness Chapter #7</a></p></div>
 </figure>
 
 <!-- use the footer area to add webpage content of the page-->
