--- a/assignments.html
+++ b/assignments.html
@@ -62,11 +62,11 @@ type="text/css">
 </figure>
 <figure class="frame">
 <div class="shoe">
-	<p><a href="fitness-6/index.html" target="blank_">Fitness Chapter #6</a></p></div>
+	<p><a href="fitness-6/Index.html" target="blank_">Fitness Chapter #6</a></p></div>
 </figure>
 <figure class="frame">
 <div class="pizza">
-	<p><a href="fitness-7/index.html">Fitness Chapter #7</a></p></div>
+	<p><a href="fitness-7/Index.html">Fitness Chapter #7</a></p></div>
 </figure>
 
 <!-- use the footer area to add webpage content of the page-->
