--- a/fitness-7/Index.html
+++ b/fitness-7/Index.html
@@ -18,13 +18,13 @@ type="text/css">
 <!--use the header area for the website name or logo-->
 
 <header>
-<p><a href="index.html"><img src="images/forward-fitness-logo.png" alt="Forward Fitness Club logo">
+<p><a href="Index.html"><img src="images/forward-fitness-logo.png" alt="Forward Fitness Club logo">
 </header>
 </header>
 <!--Use the nav area to add hyperlinks to other pages within the website-->
 <nav>
 <ul>
-<li><a href="index.html"> Home</a></li> 
+<li><a href="Index.html"> Home</a></li> 
 <li><a href="about.html">About us</a></li>     
 <li><a href="Classes.html">Classes</a></li> 
 <li><a href="Nutriton.html">Nutriton</a></li> 
