--- a/fitness-7/nutriton.html
+++ b/fitness-7/nutriton.html
@@ -23,12 +23,12 @@ type="text/css">
 
 	<header>
 		<h1>Forward Fitness Club</h1>
-		<a href="index.html"><img src="images/forward-fitness-logo.png" alt="Forward Fitness Club logo" height="220" width="297">
+		<a href="Index.html"><img src="images/forward-fitness-logo.png" alt="Forward Fitness Club logo" height="220" width="297">
 	</header>
 	<!--Use the nav area to add hyperlinks to other pages within the website-->
 	<nav>
 		<ul>
-		<li><a href="index.html"> Home</a></li> 
+		<li><a href="Index.html"> Home</a></li> 
 		<li><a href="about.html">About us</a></li>     
 		<li><a href="Classes.html">Classes</a></li> 
 		<li><a href="Nutriton.html">Nutriton</a></li> 
