--- a/assignments.html
+++ b/assignments.html
@@ -46,7 +46,7 @@ type="text/css">
 </figure>
 <figure class="frame">
 <div class="shoe">
-	<p><a href="appl3/index.html" target="blank_">Extend chapter #3</a></p></div>
+	<p><a href="extend/extend03/index.html" target="blank_">Extend chapter #3</a></p></div>
 </figure>
 <figure class="frame">
 <div class="pizza">
