--- a/fitness-6/About.html
+++ b/fitness-6/About.html
@@ -25,7 +25,7 @@
 	<nav>
 		<ul>
 	<li><a href="Index.html"> Home</a></li> 
-	<li><a href="about.html">About us</a></li>     
+	<li><a href="About.html">About us</a></li>     
 	<li><a href="Classes.html">Classes</a></li> 
 	<li><a href="Nutriton.html">Nutriton</a></li> 
 	<li><a href="contact.html">Contact us</a></li> 
@@ -97,7 +97,7 @@
 				
 		</dl>
 		
-		<p>For more information about how to stay active visit <a href="Https://health.gov/pcsfn"
+		<p>For more information About how to stay active visit <a href="Https://health.gov/pcsfn"
 		target=" blank" class="external link">U.S. Department of Health and Human Services</a>.</p>
 		
 	</div>
