--- a/assignments.html
+++ b/assignments.html
@@ -32,7 +32,7 @@ type="text/css">
 
 <!-- use the main area to add the main content of the page-->
 <main>
-<a href="https://youtu.be/dQw4w9WgXcQ?si=K2pSqtfVNZJHEusG" target="_blank"><img class="locked_frog" img src="images/Pink.jfif" alt="i persist" height="490" width="716"></a>
+<a href="https://youtu.be/dQw4w9WgXcQ?si=K2pSqtfVNZJHEusG" target="_blank"><img class="locked_frog" img src="images/cr.jpg" alt="i persist" height="490" width="716"></a>
 <h1>CLICK THE PHOTO!!<h1>
 </main>
 
@@ -66,7 +66,7 @@ type="text/css">
 </figure>
 <figure class="frame">
 <div class="pizza">
-	<p><a href="fitness-7/Index.html">Fitness Chapter #7</a></p></div>
+	<p><a href="fitness-7/Index.html" target="blank_">Fitness Chapter #7</a></p></div>
 </figure>
 
 <!-- use the footer area to add webpage content of the page-->
