--- a/contact-us.html
+++ b/contact-us.html
@@ -32,7 +32,7 @@
 	
 	<!-- use the main area to add the main content of the page-->
 	<main>
-	<img class="locked_frog" img src="images/sandcats87.jfif" alt="green" height="490" width="700">
+	<img class="locked_frog" img src="images/slime.jfif" alt="green" height="490" width="700">
 	<ul>Ways to contact me
 			<li>Email: Samantha.Martin@stu.cvccworks.edu or Samantha.Martin@cuyhtssd.org </li>
 			<li>Phone Number: NOTE* WILL BE ADDED LATER!</li>
