--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	
 	<!-- use the main area to add the main content of the page-->
 	<main>
-	<img class="locked_frog" src="images/locked.jpg" alt="green" height="490" width="716">
+	<img class="locked_frog" src="images/them.jpg" alt="green" height="490" width="716">
 	
 	</main>
 	
