--- a/fitness-7/Index.html
+++ b/fitness-7/Index.html
@@ -25,7 +25,7 @@ type="text/css">
 <nav>
 <ul>
 <li><a href="Index.html"> Home</a></li> 
-<li><a href="about.html">About us</a></li>     
+<li><a href="About.html">About us</a></li>     
 <li><a href="Classes.html">Classes</a></li> 
 <li><a href="Nutriton.html">Nutriton</a></li> 
 <li><a href="contact.html">Contact us</a></li> 
