--- a/assignments.html
+++ b/assignments.html
@@ -32,7 +32,7 @@ type="text/css">
 
 <!-- use the main area to add the main content of the page-->
 <main>
-<a href="https://youtu.be/dQw4w9WgXcQ?si=K2pSqtfVNZJHEusG" target="_blank"><img class="locked_frog" img src="images/cr.jpg" alt="i persist" height="490" width="716"></a>
+<a href="https://youtu.be/dQw4w9WgXcQ?si=K2pSqtfVNZJHEusG" target="_blank"><img class="locked_frog" img src="images/n.jpg" alt="i persist" height="600" width="650"></a>
 <h1>CLICK THE PHOTO!!<h1>
 </main>
 
