--- a/extras.html
+++ b/extras.html
@@ -16,7 +16,7 @@
 	<!--use the header area for the website name or logo-->
 
 	<header>
-		<h1>Extras</h1>
+		<h1>Welcome to Sam's Portfolio</h1>
 		
 	</header>
 	<!--Use the nav area to add hyperlinks to other pages within the website-->
@@ -32,8 +32,7 @@
 	
 	<!-- use the main area to add the main content of the page-->
 	<main>
-	<img class="locked_frog" img src="images/silly _P.jfif" alt="Pokemon in a apartment dorm looking room" height="590" width="1000">
-	<class= "Mapping"> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d230141.56955555928!2d-81.66585153024714!3d41.13205939199012!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883127fc6c669893%3A0xa17acb0640c837f4!2sTPV%20Poke%20Center!5e1!3m2!1sen!2sus!4v1725555603411!5m2!1sen!2sus" width="1009.9" height="1009.9" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+	<img class="locked_frog" src="images/stik.jpg" alt="green" height="490" width="600">
 	
 	</main>
 	
