--- a/assignments.html
+++ b/assignments.html
@@ -35,7 +35,9 @@ type="text/css">
 <!-- use the main area to add the main content of the page-->
 <main>
 <a href="https://youtu.be/dQw4w9WgXcQ?si=K2pSqtfVNZJHEusG" target="_blank"><img class="locked_frog" img src="images/n.jpg" alt="i persist" height="600" width="650"></a>
-<h1>CLICK THE PHOTO!!<h1>
+<p>click the tiny dot for background music!<p>
+	  <iframe height="10" width="10" 
+           src="https://www.youtube.com/embed/Lj2-si0bgT0?si=oAnbwFzH83YpKiVh&amp;start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </main>
 
 <figure class="frame">
