--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<!--use the header area for the website name or logo-->
 
 	<header>
-		<h1>Welcome to Sam's Portfolio</h1>
+		<h1>Sam's Portfolio</h1>
 		
 	</header>
 	<!--Use the nav area to add hyperlinks to other pages within the website-->
@@ -35,7 +35,7 @@
 	<!-- use the main area to add the main content of the page-->
 	<main>
 	<a href="https://youtu.be/dQw4w9WgXcQ?si=K2pSqtfVNZJHEusG" target="_blank"><img class="locked_frog" src="images/stik.jpg" alt="green" height="490" width="600"><p>click the tiny dot for background music!<p>
-	  <iframe height="10" width="10" 
+	  <iframe class="song" height="10" width="10" 
            src="https://www.youtube.com/embed/Lj2-si0bgT0?si=oAnbwFzH83YpKiVh&amp;start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 	</main>
 	
