--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
 	<main>
 	<a href="https://youtu.be/dQw4w9WgXcQ?si=K2pSqtfVNZJHEusG" target="_blank"><img class="locked_frog" img src="images/pooki.jpg" alt="green" height="490" width="650">
 	<p>click the tiny dot for background music!<p>
-	  <iframe height="10" width="10" 
+	  <iframe class="song" height="10" width="10" 
            src="https://www.youtube.com/embed/Lj2-si0bgT0?si=oAnbwFzH83YpKiVh&amp;start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 	
 	</main>
