--- a/assignments.html
+++ b/assignments.html
@@ -72,6 +72,14 @@ type="text/css">
 <div class="pizza">
 	<p><a href="fitness-7/Index.html" target="blank_">Fitness Chapter #7</a></p></div>
 </figure>
+<figure class="frame">
+<div class="shoe">
+	<p><a href="fitness-8/Index.html" target="blank_">Fitness Chapter #8</a></p></div>
+</figure>
+<figure class="frame">
+<div class="pizza">
+	<p><a href="fitness-9/Index.html" target="blank_">Fitness Chapter #9</a></p></div>
+</figure>
 
 <!-- use the footer area to add webpage content of the page-->
 <footer>
