--- a/fitness-8/classes.html
+++ b/fitness-8/classes.html
@@ -9,7 +9,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
 <link rel="stylesheet" 
-href="css/styles.css"
+href="CSS/styles.css"
 type="text/css">
 </head>
 <body>
