--- a/assignments.html
+++ b/assignments.html
@@ -34,10 +34,11 @@ type="text/css">
 
 <!-- use the main area to add the main content of the page-->
 <main>
-<a href="https://youtu.be/dQw4w9WgXcQ?si=K2pSqtfVNZJHEusG" target="_blank"><img class="locked_frog" img src="images/n.jpg" alt="i persist" height="600" width="650"></a>
-<p>click the tiny dot for background music!<p>
-	  <iframe class="song" height="10" width="10" 
-           src="https://www.youtube.com/embed/Lj2-si0bgT0?si=oAnbwFzH83YpKiVh&amp;start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<a href="https://youtu.be/dQw4w9WgXcQ?si=K2pSqtfVNZJHEusG" target="_blank"><img class="locked_frog" img src="images/cr.jpg" alt="i persist" height="600" width="650"></a>
+<audio controls loop>
+	<source src="video/cultoflamb.mp3" type="audio/mp3">
+	<p>your browser does not support the audio equipment.</p>
+	</audio>
 </main>
 
 <figure class="frame">
