--- a/contact-us.html
+++ b/contact-us.html
@@ -34,13 +34,14 @@
 	
 	<!-- use the main area to add the main content of the page-->
 	<main>
-	<a href="https://www.youtube.com/watch?v=YjTf0HVg66Y" target="_blank"><img class="locked_frog" img src="images/slime.jfif" alt="green" height="490" width="700"><p>click the tiny dot for background music!<p>
-	  <iframe class="song" height="10" width="10" 
-           src="https://www.youtube.com/embed/Lj2-si0bgT0?si=oAnbwFzH83YpKiVh&amp;start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+	<a href="https://www.youtube.com/watch?v=YjTf0HVg66Y" target="_blank"><img class="locked_frog" img src="images/slime.jfif" alt="green" height="490" width="700"><audio controls loop>
+	<source src="video/cultoflamb.mp3" type="audio/mp3">
+	<p>your browser does not support the audio equipment.</p>
+	</audio>
 	<ul>Ways to contact me
 			<li>Email: Samantha.Martin@stu.cvccworks.edu or Samantha.Martin@cuyhtssd.org </li>
-			<li>Phone Number: NOTE* WILL BE ADDED LATER!</li>
-			<li>Discord: NOTE* WILL BE ADDED LATER!</li>
+			<li>Phone Number: No</li>
+			<li>Discord: No</li>
 		</ul>
 	</main>
 	
