--- a/extras.html
+++ b/extras.html
@@ -2,12 +2,12 @@
 <!--thos website template was created by Sam"-->
 <html lang="en">
 <head>
-	<title>Portfolio</title>
-	<meta charset="utf-8">
-	<link rel="stylesheet" 
-	href="CSS/styles.css"
-	type="text/css">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
+<title>Portfolio</title>
+<meta charset="utf-8">
+<link rel="stylesheet" 
+href="CSS/styles.css"
+type="text/css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
 <link rel="shortcut icon" href="images/file.png">
@@ -15,37 +15,41 @@
 </head>
 <body>
 
-	<!--use the header area for the website name or logo-->
+<!--use the header area for the website name or logo-->
 
-	<header>
-		<h1>Extras</h1>
-		
-	</header>
-	<!--Use the nav area to add hyperlinks to other pages within the website-->
-	<nav>
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="about.html">About Me</a></li>
-			<li><a href="assignments.html">Assignments</a></li>
-			<li><a href="extras.html">Extras</a></li>
-			<li><a href="contact-us.html">Contact Me</a></li>
-		</ul>
-	</nav>
+<header>
+	<h1>Extras</h1>
 	
-	<!-- use the main area to add the main content of the page-->
-	<main>
-	<a href="https://www.youtube.com/watch?v=jSUUftouuxg&list=RDlxjISgoUr74&index=3" target="_blank"><img class="locked_frog" img src="images/quackin.jpg" alt="Pokemon in a apartment dorm looking room" height="783" width="564"><p>click the tiny dot for background music!<p>
-	 <iframe class="song" height="10" width="10" 
-           src="https://www.youtube.com/embed/Lj2-si0bgT0?si=oAnbwFzH83YpKiVh&amp;start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-	<class= "Mapping"> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d230141.56955555928!2d-81.66585153024714!3d41.13205939199012!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883127fc6c669893%3A0xa17acb0640c837f4!2sTPV%20Poke%20Center!5e1!3m2!1sen!2sus!4v1725555603411!5m2!1sen!2sus" width="1009.9" height="1009.9" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</header>
+<!--Use the nav area to add hyperlinks to other pages within the website-->
+<nav>
+	<ul>
+		<li><a href="index.html">Home</a></li>
+		<li><a href="about.html">About Me</a></li>
+		<li><a href="assignments.html">Assignments</a></li>
+		<li><a href="extras.html">Extras</a></li>
+		<li><a href="contact-us.html">Contact Me</a></li>
+	</ul>
+</nav>
 
-	
-	</main>
-	
-	<!-- use the footer area to add webpage content of the page-->
-	<footer>
-		<p>&copy; Copyright 2024. All Rights Reserved. </p>
-		<p>Samantha.Martin@stu.cvccworks.edu</p>
-	</footer>
+<!-- use the main area to add the main content of the page-->
+<main>
+<a href="https://www.youtube.com/watch?v=jSUUftouuxg&list=RDlxjISgoUr74&index=3" target="_blank"><img class="locked_frog" img src="images/quackin.jpg" alt="Pokemon in a apartment dorm looking room" height="783" width="564">
+<audio controls loop>
+<source src="video/cultoflamb.mp3" type="audio/mp3">
+<p>your browser does not support the audio equipment.</p>
+</audio>
+
+
+<class= "Mapping"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1529693.8066419116!2d-83.71897309999996!3d41.51113920000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8830fb8c6b2a2705%3A0xb3e99d3e8bb7d36!2sCleveland%20Botanical%20Garden!5e0!3m2!1sen!2sus!4v1729097491329!5m2!1sen!2sus" width="1009.9" height="1009.9" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+
+</main>
+
+<!-- use the footer area to add webpage content of the page-->
+<footer>
+	<p>&copy; Copyright 2024. All Rights Reserved. </p>
+	<p>Samantha.Martin@stu.cvccworks.edu</p>
+</footer>
 </body>
 </html>
