--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
 	
 	<!-- use the main area to add the main content of the page-->
 	<main>
-	<a href="https://youtu.be/dQw4w9WgXcQ?si=K2pSqtfVNZJHEusG" target="_blank"><img class="locked_frog" src="images/stik.jpg" alt="green" height="490" width="600"><p>click the tiny dot for background music!<p>
-	  <iframe class="song" height="10" width="10" 
-           src="https://www.youtube.com/embed/Lj2-si0bgT0?si=oAnbwFzH83YpKiVh&amp;start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+	<audio controls loop>
+	<source src="video/cultoflamb.mp3" type="audio/mp3">
+	<p>your browser does not support the audio equipment.</p>
+	</audio>
+		<img class="locked_frog" img src="images/babes.jpg" alt="green" height="490" width="650">
 	</main>
 	
 	<!-- use the footer area to add webpage content of the page-->
