--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
 	
 	<!-- use the main area to add the main content of the page-->
 	<main>
-	<a href="https://youtu.be/dQw4w9WgXcQ?si=K2pSqtfVNZJHEusG" target="_blank"><img class="locked_frog" img src="images/babes.jpg" alt="green" height="490" width="650">
+	<a href="https://youtu.be/dQw4w9WgXcQ?si=K2pSqtfVNZJHEusG" target="_blank"><img class="locked_frog" img src="images/fire.jpg" alt="green" height="490" width="650">
 	<audio controls loop>
 	<source src="video/cultoflamb.mp3" type="audio/mp3">
 	<p>your browser does not support the audio equipment.</p>
