--- a/assignments.html
+++ b/assignments.html
@@ -39,6 +39,7 @@ type="text/css">
 	<source src="video/cultoflamb.mp3" type="audio/mp3">
 	<p>your browser does not support the audio equipment.</p>
 	</audio>
+	<p>may i offer you some music?</p>
 </main>
 
 <figure class="frame">
@@ -80,6 +81,14 @@ type="text/css">
 <figure class="frame">
 <div class="pizza">
 	<p><a href="fitness-9/Index.html" target="blank_">Fitness Chapter #9</a></p></div>
+</figure>
+<figure class="frame">
+<div class="shoe">
+	<p><a href="apply5/index.html" target="blank_">Apply chapter #5</a></p></div>
+</figure>
+<figure class="frame">
+<div class="pizza">
+	<p><a href="extend5/index.html" target="blank_">Extend chapter #5</a></p></div>
 </figure>
 
 <!-- use the footer area to add webpage content of the page-->
