--- a/assignments.html
+++ b/assignments.html
@@ -80,7 +80,7 @@ type="text/css">
 </figure>
 <figure class="frame">
 <div class="pizza">
-	<p><a href="fitness-9/Index.html" target="blank_">Fitness Chapter #9</a></p></div>
+	<p><a href="fitness-9/index.html" target="blank_">Fitness Chapter #9</a></p></div>
 </figure>
 <figure class="frame">
 <div class="shoe">
