--- a/fitness-9/about.html
+++ b/fitness-9/about.html
@@ -23,11 +23,11 @@
 	</header>
 	<!--Use the nav area to add hyperlinks to other pages within the website-->
 	<nav>
-		<ul>
+	<ul>
 	<li><a href="index.html"> Home</a></li> 
 	<li><a href="about.html">About us</a></li>     
-	<li><a href="Classes.html">Classes</a></li> 
-	<li><a href="Nutriton.html">Nutriton</a></li> 
+	<li><a href="classes.html">Classes</a></li> 
+	<li><a href="nutriton.html">Nutriton</a></li> 
 	<li><a href="contact.html">Contact us</a></li> 
 	</ul>
 	</nav>
