--- a/assignments.html
+++ b/assignments.html
@@ -76,7 +76,7 @@ type="text/css">
 </figure>
 <figure class="frame">
 <div class="shoe">
-	<p><a href="fitness-8/Index.html" target="blank_">Fitness Chapter #8</a></p></div>
+	<p><a href="fitness-8/index.html" target="blank_">Fitness Chapter #8</a></p></div>
 </figure>
 <figure class="frame">
 <div class="pizza">
