--- a/fitness-8/about.html
+++ b/fitness-8/about.html
@@ -26,8 +26,8 @@
 		<ul>
 	<li><a href="index.html"> Home</a></li> 
 	<li><a href="about.html">About us</a></li>     
-	<li><a href="Classes.html">Classes</a></li> 
-	<li><a href="Nutriton.html">Nutriton</a></li> 
+	<li><a href="classes.html">Classes</a></li> 
+	<li><a href="nutriton.html">Nutriton</a></li> 
 	<li><a href="contact.html">Contact us</a></li> 
 	</ul>
 	</nav>
