--- a/fitness-8/nutriton.html
+++ b/fitness-8/nutriton.html
@@ -30,8 +30,8 @@ type="text/css">
 		ul>
 	<li><a href="index.html"> Home</a></li> 
 	<li><a href="about.html">About us</a></li>     
-	<li><a href="Classes.html">Classes</a></li> 
-	<li><a href="Nutriton.html">Nutriton</a></li> 
+	<li><a href="classes.html">Classes</a></li> 
+	<li><a href="nutriton.html">Nutriton</a></li> 
 	<li><a href="contact.html">Contact us</a></li> 
 	</ul>
 	</nav>
