--- a/assignments.html
+++ b/assignments.html
@@ -90,6 +90,14 @@ type="text/css">
 <div class="pizza">
 	<p><a href="extend5/index.html" target="blank_">Extend chapter #5</a></p></div>
 </figure>
+<figure class="frame">
+<div class="shoe">
+	<p><a href="apply6/index.html" target="blank_">Apply chapter #6</a></p></div>
+</figure>
+<figure class="frame">
+<div class="pizza">
+	<p><a href="extend/index.html" target="blank_">Extend chapter #6</a></p></div>
+</figure>
 
 <!-- use the footer area to add webpage content of the page-->
 <footer>
