--- a/assignments.html
+++ b/assignments.html
@@ -41,62 +41,73 @@ type="text/css">
 	</audio>
 	<p>may i offer you some music?</p>
 </main>
-
+<h2>Fitness Project by Chapter</h2>
+<figure class="frame">
+	<div class="shoe">
+	<p><a href="chap-3/index.html" target="blank_">Fitness Chapter #3</a></p></div>
+	</figure>
+<figure class="frame">
+	<div class="pizza">
+	<p><a href="chapter-4/Index.html" target="blank_">Fitness Chapter #4</a></p></div>
+</figure>
+<figure class="frame">
+	<div class="shoe">
+	<p><a href="chapter-5/index.html" target="blank_">Fitness Chapter #5</a></p></div>
+</figure>
+<figure class="frame">
+<div class="pizza">
+	<p><a href="fitness-6/Index.html" target="blank_">Fitness Chapter #6</a></p></div>
+</figure>
+<figure class="frame">
+<div class="shoe">
+	<p><a href="fitness-7/Index.html" target="blank_">Fitness Chapter #7</a></p></div>
+</figure>
+<figure class="frame">
+<div class="pizza">
+	<p><a href="fitness-8/index.html" target="blank_">Fitness Chapter #8</a></p></div>
+</figure>
+<figure class="frame">
+<div class="shoe">
+	<p><a href="fitness-9/index.html" target="blank_">Fitness Chapter #9</a></p></div>
+</figure>
+<h2>Apply by Chapter</h2>
+<figure class="frame">
+<div class="pizza">
+	<p><a href="apply-3/index.html" target="blank_">apply chapter #3</a></p></div>
+	</figure>
 <figure class="frame">
 <div class="shoe">
 	<p><a href="apply/index.html" target="blank_">Apply chapter #4</a></p></div>
 </figure>
 <figure class="frame">
 <div class="pizza">
-	<p><a href="extend/extend04.html" target="blank_">Extend chapter #4</a></p></div>
-</figure>
-<figure class="frame">
-<div class="shoe">
-	<p><a href="extend/extend03.html" target="blank_">Extend chapter #3</a></p></div>
-</figure>
-<figure class="frame">
-<div class="pizza">
-	<p><a href="apply-3/index.html" target="blank_">apply chapter #3</a></p></div>
-	</figure>
-	<figure class="frame">
-	<div class="shoe">
-	<p><a href="chap-3/index.html" target="blank_">Fitness Chapter #3</a></p></div>
-	</figure>
-	<figure class="frame">
-	<div class="pizza">
-	<p><a href="chapter-4/Index.html" target="blank_">Fitness Chapter #4</a></p></div>
-</figure>
-<figure class="frame">
-<div class="shoe">
-	<p><a href="fitness-6/Index.html" target="blank_">Fitness Chapter #6</a></p></div>
-</figure>
-<figure class="frame">
-<div class="pizza">
-	<p><a href="fitness-7/Index.html" target="blank_">Fitness Chapter #7</a></p></div>
-</figure>
-<figure class="frame">
-<div class="shoe">
-	<p><a href="fitness-8/index.html" target="blank_">Fitness Chapter #8</a></p></div>
-</figure>
-<figure class="frame">
-<div class="pizza">
-	<p><a href="fitness-9/index.html" target="blank_">Fitness Chapter #9</a></p></div>
-</figure>
-<figure class="frame">
-<div class="shoe">
 	<p><a href="apply5/index.html" target="blank_">Apply chapter #5</a></p></div>
-</figure>
-<figure class="frame">
-<div class="pizza">
-	<p><a href="extend5/index.html" target="blank_">Extend chapter #5</a></p></div>
 </figure>
 <figure class="frame">
 <div class="shoe">
 	<p><a href="apply6/index.html" target="blank_">Apply chapter #6</a></p></div>
 </figure>
+
+
+
+
+<h2>Extend by Chapter</h2>
 <figure class="frame">
 <div class="pizza">
-	<p><a href="extend/index.html" target="blank_">Extend chapter #6</a></p></div>
+	<p><a href="extend/extend03.html" target="blank_">Extend chapter #3</a></p></div>
+</figure>
+<figure class="frame">
+<div class="shoe">
+	<p><a href="extend/extend04.html" target="blank_">Extend chapter #4</a></p></div>
+</figure>
+<figure class="frame">
+<div class="pizza">
+	<p><a href="extend5/index.html" target="blank_">Extend chapter #5</a></p></div>
+</figure>
+
+<figure class="frame">
+<div class="shoe">
+	<p><a href="extend6/extend06.html" target="blank_">Extend chapter #6</a></p></div>
 </figure>
 
 <!-- use the footer area to add webpage content of the page-->
