--- a/assignments.html
+++ b/assignments.html
@@ -41,7 +41,7 @@ type="text/css">
 	</audio>
 	<p>may i offer you some music?</p>
 </main>
-<h2>Fitness Project by Chapter</h2>
+<h1><b>Fitness Project by Chapter</b></h1>
 <figure class="frame">
 	<div class="shoe">
 	<p><a href="chap-3/index.html" target="blank_">Fitness Chapter #3</a></p></div>
@@ -70,7 +70,7 @@ type="text/css">
 <div class="shoe">
 	<p><a href="fitness-9/index.html" target="blank_">Fitness Chapter #9</a></p></div>
 </figure>
-<h2>Apply by Chapter</h2>
+<h1><b>Apply by Chapter</b></h1>
 <figure class="frame">
 <div class="pizza">
 	<p><a href="apply-3/index.html" target="blank_">apply chapter #3</a></p></div>
@@ -91,7 +91,7 @@ type="text/css">
 
 
 
-<h2>Extend by Chapter</h2>
+<h1><b>Extend by Chapter</b></h1>
 <figure class="frame">
 <div class="pizza">
 	<p><a href="extend/extend03.html" target="blank_">Extend chapter #3</a></p></div>
