--- a/assignments.html
+++ b/assignments.html
@@ -87,6 +87,10 @@ type="text/css">
 <div class="shoe">
 	<p><a href="apply6/index.html" target="blank_">Apply chapter #6</a></p></div>
 </figure>
+<figure class="frame">
+<div class="pizza">
+	<p><a href="apply7/index.html" target="blank_">Apply chapter #7</a></p></div>
+</figure>
 
 
 
@@ -104,12 +108,13 @@ type="text/css">
 <div class="pizza">
 	<p><a href="extend5/index.html" target="blank_">Extend chapter #5</a></p></div>
 </figure>
-
 <figure class="frame">
 <div class="shoe">
 	<p><a href="extend6/extend06.html" target="blank_">Extend chapter #6</a></p></div>
 </figure>
-
+<div class="pizza">
+	<p><a href="extend7/index.html" target="blank_">Extend chapter #7</a></p></div>
+</figure>
 <!-- use the footer area to add webpage content of the page-->
 <footer>
 <p>&copy; Copyright 2024. All Rights Reserved. </p>
