--- a/assignments.html
+++ b/assignments.html
@@ -113,7 +113,7 @@ type="text/css">
 	<p><a href="extend6/extend06.html" target="blank_">Extend chapter #6</a></p></div>
 </figure>
 <div class="pizza">
-	<p><a href="extend7/index.html" target="blank_">Extend chapter #7</a></p></div>
+	<p><a href="extend7/extend07.html" target="blank_">Extend chapter #7</a></p></div>
 </figure>
 <!-- use the footer area to add webpage content of the page-->
 <footer>
