--- a/assignments.html
+++ b/assignments.html
@@ -91,6 +91,10 @@ type="text/css">
 <div class="pizza">
 	<p><a href="apply7/index.html" target="blank_">Apply chapter #7</a></p></div>
 </figure>
+<figure class="frame">
+<div class="shoe">
+	<p><a href="apply8/index.HTML" target="blank_">Apply chapter #8</a></p></div>
+</figure>
 
 
 
@@ -114,6 +118,9 @@ type="text/css">
 </figure>
 <div class="pizza">
 	<p><a href="extend7/extend07.html" target="blank_">Extend chapter #7</a></p></div>
+</figure>
+<div class="shoe">
+	<p><a href="extend8/extend08.html" target="blank_">Extend chapter #8</a></p></div>
 </figure>
 <!-- use the footer area to add webpage content of the page-->
 <footer>
