--- a/assignments.html
+++ b/assignments.html
@@ -70,25 +70,29 @@ type="text/css">
 <div class="shoe">
 	<p><a href="fitness-9/index.html" target="blank_">Fitness Chapter #9</a></p></div>
 </figure>
-<h1><b>Apply by Chapter</b></h1>
 <figure class="frame">
 <div class="pizza">
+	<p><a href="fitness-10/index.html" target="blank_">Fitness Chapter #10</a></p></div>
+</figure>
+<h1><b>Apply by Chapter</b></h1>
+<figure class="frame">
+<div class="shoe">
 	<p><a href="apply-3/index.html" target="blank_">apply chapter #3</a></p></div>
 	</figure>
 <figure class="frame">
-<div class="shoe">
+<div class="pizza">
 	<p><a href="apply/index.html" target="blank_">Apply chapter #4</a></p></div>
 </figure>
 <figure class="frame">
-<div class="pizza">
+<div class="shoe">
 	<p><a href="apply5/index.html" target="blank_">Apply chapter #5</a></p></div>
 </figure>
 <figure class="frame">
-<div class="shoe">
+<div class="pizza">
 	<p><a href="apply6/index.html" target="blank_">Apply chapter #6</a></p></div>
 </figure>
 <figure class="frame">
-<div class="pizza">
+<div class="shoe">
 	<p><a href="apply7/index.html" target="blank_">Apply chapter #7</a></p></div>
 </figure>
 <figure class="frame">
