--- a/assignments.html
+++ b/assignments.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" 
 href="CSS/styles.css"
 type="text/css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
@@ -96,8 +97,16 @@ type="text/css">
 	<p><a href="apply7/index.html" target="blank_">Apply chapter #7</a></p></div>
 </figure>
 <figure class="frame">
-<div class="shoe">
+<div class="pizza">
 	<p><a href="apply8/index.HTML" target="blank_">Apply chapter #8</a></p></div>
+</figure>
+<figure class="frame">
+<div class="shoe">
+	<p><a href="apply9/index.html" target="blank_">Apply chapter #9</a></p></div>
+</figure>
+<figure class="frame">
+<div class="shoe">
+	<p><a href="apply10/index.html" target="blank_">Apply chapter #10</a></p></div>
 </figure>
 
 
@@ -131,5 +140,7 @@ type="text/css">
 <p>&copy; Copyright 2024. All Rights Reserved. </p>
 <p>Samantha.Martin@stu.cvccworks.edu</p>
 </footer>
+<script src="scripts/script.js">
+</script>
 </body>
 </html>
