--- a/extras.html
+++ b/extras.html
@@ -1,28 +1,31 @@
-<!DOCTYPE html>
-<!--thos website template was created by Sam"-->
-<html lang="en">
-<head>
-<title>Portfolio</title>
-<meta charset="utf-8">
-<link rel="stylesheet" 
-href="CSS/styles.css"
-type="text/css">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
-<link rel="shortcut icon" href="images/file.png">
+	<!DOCTYPE html>
+	<!--thos website template was created by Sam"-->
+	<html lang="en">
+	<head>
+	<title>Portfolio</title>
+	<meta charset="utf-8">
+	<link rel="stylesheet" 
+	href="CSS/styles.css"
+	type="text/css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+	<link rel="shortcut icon" href="images/file.png">
 
-</head>
-<body>
+	</head>
+	<body>
 
-<!--use the header area for the website name or logo-->
+	<!--use the header area for the website name or logo-->
 
-<header>
-	<h1>Extras</h1>
-	
-</header>
-<!--Use the nav area to add hyperlinks to other pages within the website-->
-<nav>
+	<header>
+		<h1>Extras and Favorites</h1>
+		
+	</header>
+	<!--Use the nav area to add hyperlinks to other pages within the website-->
+	<a class="menu-icon" onclick="hamburger()">
+				<div>&#9776;</div>
+	<nav>
 	<ul>
 		<li><a href="index.html">Home</a></li>
 		<li><a href="about.html">About Me</a></li>
@@ -30,26 +33,106 @@ type="text/css">
 		<li><a href="extras.html">Extras</a></li>
 		<li><a href="contact-us.html">Contact Me</a></li>
 	</ul>
-</nav>
-
-<!-- use the main area to add the main content of the page-->
-<main>
-<a href="https://www.youtube.com/watch?v=jSUUftouuxg&list=RDlxjISgoUr74&index=3" target="_blank"><img class="locked_frog" img src="images/quackin.jpg" alt="Pokemon in a apartment dorm looking room" height="783" width="564">
-<audio controls loop>
-<source src="video/cultoflamb.mp3" type="audio/mp3">
-<p>your browser does not support the audio equipment.</p>
-</audio>
+	</nav>
 
 
-<class= "Mapping"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1529693.8066419116!2d-83.71897309999996!3d41.51113920000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8830fb8c6b2a2705%3A0xb3e99d3e8bb7d36!2sCleveland%20Botanical%20Garden!5e0!3m2!1sen!2sus!4v1729097491329!5m2!1sen!2sus" width="1009.9" height="1009.9" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+	<!-- use the main area to add the main content of the page-->
+	<main>
+	<img class="locked_frog" img src="images/quackin.jpg" alt="Pokemon in a apartment dorm looking room" height="783" width="564">
+	<audio controls loop>
+	<source src="video/cultoflamb.mp3" type="audio/mp3">
+	<p>your browser does not support the audio equipment.</p>
+	</audio>
+	<p>may i offer you some music?</p>
 
 
-</main>
+	<class= "Mapping"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1529693.8066419116!2d-83.71897309999996!3d41.51113920000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8830fb8c6b2a2705%3A0xb3e99d3e8bb7d36!2sCleveland%20Botanical%20Garden!5e0!3m2!1sen!2sus!4v1729097491329!5m2!1sen!2sus" width="400.9" height="400.9" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> <p>places you should
+<table>
+					<caption>Favorite Epic Saga's song</caption>
 
-<!-- use the footer area to add webpage content of the page-->
-<footer>
-	<p>&copy; Copyright 2024. All Rights Reserved. </p>
-	<p>Samantha.Martin@stu.cvccworks.edu</p>
-</footer>
-</body>
-</html>
+					<tr> <!-- row 1-->
+						<th>The Troy Saga</th>
+						<th>The Cyclops Saga</th>
+						<th>The Ocean Saga</th>
+						<th>The Circe Saga</th>
+						<th>The Underworld Saga</th>
+						<th>The Thunder Saga</th>
+						<th>The Wisdom Saga</th>
+						<th>The Vengeance Saga</th>
+						<th>The Ithaca Saga</th>
+					</tr>
+
+					<tr><!-- row 2-->
+						<td>Open Arms</td>
+						<td>Remember Them</td>
+						<td>Luck Runs Out</td>
+						<td>Puppeteer</td>
+						<td>No Longer You</td>
+						<td>Scylla</td>
+						<td>God Games</td>
+						<td>Charybdis</td>
+						<td>The Challenge</td>
+					</tr>
+				</table>
+	<h3>A Few of My playlists</h3>
+	<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/64zRcsdzN7DQqAK4rfMS9B?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+	<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2Mns8JTcPR0TtTXV1DcDlv?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+	<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/3JQNtAkmaoWDIFyMgbQoC4?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+	<h2>SUPPORT THIS MAN, JORGE RIVERA-HERRANS!!!!!!!</h2>
+	<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/3sdEH7HfFE3d4xry5RnnLr?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+	<div id="form">
+					<h2>Music?</h2>
+					<form class="form-grid">
+						<fieldset>
+							<legend>Customer Information</legend>
+							<label for="fName">First Name:</label>
+							<input type="text" name="fName" id="fName" required>
+							<label for="lName">Last Name:</label>
+							<input type="text" name="lName" id="lname" required>
+							<label for="email">Email:</label>
+							<input type="email" name="email" id="email" required>
+							<label for="phone">Phone:</label>
+							<input type="tel" name="phone" id="phone" required>
+						</fieldset>
+
+						<fieldset>
+							<legend>Additional Information</legend>
+							<p>What did you think of the music?</p>
+							<label for="grpfit">
+								<input type="checkbox" name="interest" id="grpfit" value="yes">
+								I liked them.</label>
+
+							<label for="prtrain">
+								<input type="checkbox" name="interest" id="grpfit" value="no">
+								didn't listen (yet)</label>
+
+							<label for="nutr">
+								<input type="checkbox" name="interest" id="nutr" value="meh">
+								it was ok, but i might not listen again</label>
+								<label for="nutr">
+								<input type="checkbox" name="interest" id="nutr" value="meh">
+								BLEH!!!</label>
+								<!-- label for attr == input id attr -->
+						</fieldset>
+
+						<fieldset>
+							<label for="questions">Questions?</label>
+							<textarea id="questions" name="questions" rows="5" cols="35"></textarea>
+						</fieldset>
+
+						<input type="submit" id="submit" value="Submit" class="btn">
+					</form>
+				</div>
+	</main>
+
+	<!-- use the footer area to add webpage content of the page-->
+	<footer>
+		<p>&copy; Copyright 2024. All Rights Reserved. </p>
+		<p>Samantha.Martin@stu.cvccworks.edu</p>
+	</footer>
+	<script src="scripts/script.js">
+	</script>
+	</body>
+	</html>
