--- a/assignments.html
+++ b/assignments.html
@@ -105,7 +105,7 @@ type="text/css">
 	<p><a href="apply9/index.html" target="blank_">Apply chapter #9</a></p></div>
 </figure>
 <figure class="frame">
-<div class="shoe">
+<div class="pizza">
 	<p><a href="apply10/index.html" target="blank_">Apply chapter #10</a></p></div>
 </figure>
 
@@ -133,7 +133,7 @@ type="text/css">
 	<p><a href="extend7/extend07.html" target="blank_">Extend chapter #7</a></p></div>
 </figure>
 <div class="shoe">
-	<p><a href="extend8/extend08.html" target="blank_">Extend chapter #8</a></p></div>
+	<p><a href="extend8/index.HTML" target="blank_">Extend chapter #8</a></p></div>
 </figure>
 <!-- use the footer area to add webpage content of the page-->
 <footer>
