--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<source src="video/cultoflamb.mp3" type="audio/mp3">
 	<p>your browser does not support the audio equipment.</p>
 	</audio>
-		<img class="locked_frog" img src="images/babes.jpg" alt="green" height="490" width="650">
+		<img class="locked_frog" img src="images/stik.jpg" alt="green" height="490" width="650">
 	</main>
 	
 	<!-- use the footer area to add webpage content of the page-->
