--- a/assignments.html
+++ b/assignments.html
@@ -98,7 +98,7 @@ type="text/css">
 </figure>
 <figure class="frame">
 <div class="pizza">
-	<p><a href="apply8/index.HTML" target="blank_">Apply chapter #8</a></p></div>
+	<p><a href="apply8/index.html" target="blank_">Apply chapter #8</a></p></div>
 </figure>
 <figure class="frame">
 <div class="shoe">
