--- a/fitness-10/index.html
+++ b/fitness-10/index.html
@@ -5,7 +5,7 @@
 <title>Forward Fitness Club</title>
 <meta charset="utf-8">
 <link rel="stylesheet" 
-href="css/styles.css"
+href="CSS/styles.css"
 type="text/css">
 <meta name="veiwpoint" content=" width=device-width, initial-scale=1">
 <link rel="preconnect" href="https://fonts.googleapis.com">
