--- a/fitness-10/nutriton.html
+++ b/fitness-10/nutriton.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="veiwpoint" content=" width=device-width, initial-scale=1">
 	<link rel="stylesheet" 
-href="css/styles.css"
+href="CSS/styles.css"
 type="text/css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
