--- a/assignments.html
+++ b/assignments.html
@@ -53,7 +53,7 @@ type="text/css">
 </figure>
 <figure class="frame">
 	<div class="shoe">
-	<p><a href="chapter-5/index.html" target="blank_">Fitness Chapter #5</a></p></div>
+	<p><a href="chapter-5/Index.html" target="blank_">Fitness Chapter #5</a></p></div>
 </figure>
 <figure class="frame">
 <div class="pizza">
