--- a/fitness5/About.html
+++ b/fitness5/About.html
@@ -5,7 +5,7 @@
 <head>
 	<title>Forward Fitness Club</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="CSS/styles.css">
 	<meta name="viewport" content="width=device-width, inital-scale=1">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
