--- a/extend8/index.HTML
+++ b/extend8/index.HTML
@@ -4,7 +4,7 @@
 <html lang ="en">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="css/styles08.css" type="text/css">
+        <link rel="stylesheet" href="CSS/styles08.css" type="text/css">
     </head>
     <body>
         <main>
