--- a/contact-us.html
+++ b/contact-us.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" 
 	href="CSS/styles.css"
 	type="text/css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
@@ -22,22 +23,26 @@
 		
 	</header>
 	<!--Use the nav area to add hyperlinks to other pages within the website-->
+	<a class="menu-icon" onclick="hamburger()">
+			<div>&#9776;</div>
 	<nav>
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="about.html">About Me</a></li>
-			<li><a href="assignments.html">Assignments</a></li>
-			<li><a href="extras.html">Extras</a></li>
-			<li><a href="contact-us.html">Contact Me</a></li>
-		</ul>
-	</nav>
+<ul>
+	<li><a href="index.html">Home</a></li>
+	<li><a href="about.html">About Me</a></li>
+	<li><a href="assignments.html">Assignments</a></li>
+	<li><a href="extras.html">Extras</a></li>
+	<li><a href="contact-us.html">Contact Me</a></li>
+</ul>
+</nav>
+
 	
 	<!-- use the main area to add the main content of the page-->
 	<main>
-	<a href="https://www.youtube.com/watch?v=YjTf0HVg66Y" target="_blank"><img class="locked_frog" img src="images/slime.jfif" alt="green" height="490" width="700"><audio controls loop>
+	<a href="https://www.youtube.com/watch?v=YjTf0HVg66Y" target="_blank"><img class="locked_toad" img src="images/slime.jfif" alt="green" height="490" width="700"><audio controls loop>
 	<source src="video/cultoflamb.mp3" type="audio/mp3">
 	<p>your browser does not support the audio equipment.</p>
 	</audio>
+	<p>may i offer you some music?</p>
 	<ul>Ways to contact me
 			<li>Email: Samantha.Martin@stu.cvccworks.edu or Samantha.Martin@cuyhtssd.org </li>
 			<li>Phone Number: No</li>
@@ -50,5 +55,7 @@
 		<p>&copy; Copyright 2024. All Rights Reserved. </p>
 		<p>Samantha.Martin@stu.cvccworks.edu</p>
 	</footer>
+	<script src="scripts/script.js">
+</script>
 </body>
 </html>
