--- a/contact-us.html
+++ b/contact-us.html
@@ -38,7 +38,7 @@
 	
 	<!-- use the main area to add the main content of the page-->
 	<main>
-	<a href="https://www.youtube.com/watch?v=YjTf0HVg66Y" target="_blank"><img class="locked_toad" img src="images/slime.jfif" alt="green" height="490" width="700"><audio controls loop>
+	<img class="locked_toad" img src="images/slime.jfif" alt="green" height="490" width="700"><audio controls loop>
 	<source src="video/cultoflamb.mp3" type="audio/mp3">
 	<p>your browser does not support the audio equipment.</p>
 	</audio>
