--- a/assignments.html
+++ b/assignments.html
@@ -135,6 +135,12 @@ type="text/css">
 <div class="shoe">
 	<p><a href="extend8/index.HTML" target="blank_">Extend chapter #8</a></p></div>
 </figure>
+
+<h1><b>JavaScript by Chapter</b></h1>
+	<figure class="frame">
+<div class="pizza">
+	<p><a href="chapter/js03.html" target="blank_">JavaScript chapter #3</a></p></div>
+</figure>
 <!-- use the footer area to add webpage content of the page-->
 <footer>
 <p>&copy; Copyright 2024. All Rights Reserved. </p>
