--- a/assignments.html
+++ b/assignments.html
@@ -141,6 +141,18 @@ type="text/css">
 <div class="pizza">
 	<p><a href="chapter/js03.html" target="blank_">JavaScript chapter #3</a></p></div>
 </figure>
+<div class="shoe">
+	<p><a href="project01/project03-01.html" target="blank_">Chapter 3 Project #1</a></p></div>
+</figure>
+	<div class="pizza">
+	<p><a href="project02/project03-02_txt.html" target="blank_">Chapter 3 Project #2</a></p></div>
+</figure>
+	<div class="shoe">
+	<p><a href="project02/project03-03_txt.html" target="blank_">Chapter 3 Project #3</a></p></div>
+</figure>
+	<div class="pizza">
+	<p><a href="project02/project03-04_txt.html" target="blank_">Chapter 3 Project #4</a></p></div>
+</figure>
 <!-- use the footer area to add webpage content of the page-->
 <footer>
 <p>&copy; Copyright 2024. All Rights Reserved. </p>
